--- a/email_spam.ipynb
+++ b/email_spam.ipynb
@@ -888,7 +888,7 @@
    "id": "f464ae55-6546-4258-a601-222cd3bb312b",
    "metadata": {},
    "source": [
-    "## Checking for the sample email inputs using Naive Bayes Classifier"
+    "## Checking for the sample email inputs using Decision Tree Classifier"
    ]
   },
   {
