--- a/email_spam.ipynb
+++ b/email_spam.ipynb
@@ -906,7 +906,7 @@
     }
    ],
    "source": [
-    "new_review = \"I'm gonna be home soon and i don't want to talk about this stuff anymore tonight, k? I've cried enough today.\"\n",
+    "new_review = \"I'm gonna be home soon and i don't want to talk about this stuff anymore tonight, k? I've cried Enough today.\"\n",
     "new_review = re.sub('[^a-zA-Z]', ' ', new_review)\n",
     "new_review = new_review.lower()\n",
     "new_review = new_review.split()\n",
